--- a/DockerFile
+++ b/DockerFile
@@ -4,6 +4,11 @@ MAINTAINER i@imux.top
 RUN apt-get update && apt-get install -y \
       build-essential \
       git \
+      libgtk2.0-dev \ 
+      pkg-config \
+      libavcodec-dev \ 
+      libavformat-dev \
+      libswscale-dev \
       libatlas-base-dev \
       libatlas-dev \
       libboost-all-dev \
@@ -12,23 +17,25 @@ RUN apt-get update && apt-get install -y \
       libhdf5-dev \
       libleveldb-dev \
       liblmdb-dev \
-      libopencv-dev \
       libprotobuf-dev \
       libsnappy-dev \
       lsb-release \
       protobuf-compiler \
-      python-dev \
-      python-numpy \
-      python-pip \
-      python-setuptools \
-      python-scipy \
+      zip \
       wget \
     && rm -rf /var/lib/apt/lists/*
 RUN pip install --upgrade pip
 
+ADD cmake-3.16.5-Linux-x86_64.tar.gz .
+ADD 4.2.0.zip .
+
+RUN unzip /4.2.0.zip && cd opencv-4.2.0 && mkdir -p build && cd build \
+    && /cmake-3.16.5-Linux-x86_64/bin/cmake -DCMAKE_BUILD_TYPE=Release .. && make -j"$(nproc)"
+    && make install
+
 RUN git clone https://github.com/llfl/openpose
 RUN cd openpose && mkdir -p build && cd build \
-    && cmake -DCMAKE_BUILD_TYPE=Release .. && make -j"$(nproc)"
+    && /cmake-3.16.5-Linux-x86_64/bin/cmake -DCMAKE_BUILD_TYPE=Release .. && make -j"$(nproc)"
 
 # RUN cd openpose/models && ./getModels.sh
 
