--- a/DockerFile
+++ b/DockerFile
@@ -30,7 +30,7 @@ ADD cmake-3.16.5-Linux-x86_64.tar.gz .
 ADD 4.2.0.zip .
 
 RUN unzip /4.2.0.zip && cd opencv-4.2.0 && mkdir -p build && cd build \
-    && /cmake-3.16.5-Linux-x86_64/bin/cmake -DCMAKE_BUILD_TYPE=Release .. && make -j"$(nproc)"
+    && /cmake-3.16.5-Linux-x86_64/bin/cmake -DCMAKE_BUILD_TYPE=Release .. && make -j"$(nproc)" \
     && make install
 
 RUN git clone https://github.com/llfl/openpose
